Changed spacer to an image and set everything to align center to fix Samsung view.

--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,7 @@
     margin: 4px;
     padding-top: 8px;
     padding-bottom: 8px;
-    text-align: -webkit-center;
+    text-align: center;
   }
   
   .skills .icon img {
@@ -207,14 +207,8 @@
     transform: scale(1.1);
   }
   
-  .skills .skill .spacer {
-    border-top: 2px solid rgb(182, 182, 182);
-    width: 80%;
-    margin-top: 4px;
-  }
-  
   .skills .skill .text {
-    font-size: 20px;
+    font-size: 18px;
   }
   
   
